force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Amount__c</fullName>
    <formula>IF( fw1__Fixed_Amount__c  != 0, 
    fw1__Fixed_Amount__c , 
    IF( fw1__Percentage_Of_Total__c &gt; 0, 
        fw1__Percentage_Of_Total__c * fw1__Invoice__r.fw1__Net_Amount__c, 
        0
    ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>