force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Fixed_Amount__c</fullName>
    <label>Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>