force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>