force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Payment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>fw1__Payment__c</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>