force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Percentage_Of_Total__c.field-meta.xml
<CustomField>
    <fullName>fw1__Percentage_Of_Total__c</fullName>
    <label>Percentage Of Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>