force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Tax_Amount__c</fullName>
    <formula>IF( fw1__Taxable__c, 
    IF( fw1__Tax_Rate__c &gt; 0, 
        fw1__Tax_Rate__c * fw1__Amount__c, 
        0
    ), 
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>