force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>fw1__Tax_Rate__c</fullName>
    <inlineHelpText>When adding an additional charge, you can leave this blank and the tax on the invoice will be taken.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>