force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Taxable__c.field-meta.xml
<CustomField>
    <fullName>fw1__Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>