force-app/main/default/objects/fw1__Additional_Charge__c/fields/fw1__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Amount__c</fullName>
    <formula>fw1__Amount__c  +  fw1__Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>