force-app/main/default/objects/fw1__Additional_Charge__c/fields/Is_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoice_Sent__c</fullName>
    <formula>OR(
	fw1__Invoice__r.fw1__Email_Sent__c,
	NOT(ISBLANK(fw1__Invoice__r.Quickbooks_ID__c ) )
	)</formula>
    <label>Is Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>