force-app/main/default/objects/fw1__Additional_Charge__c/validationRules/Cannot_Edit_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Invoice</fullName>
    <active>true</active>
    <description>Cannot edit invoice if sent or paid</description>
    <errorConditionFormula>Is_Invoice_Sent__c</errorConditionFormula>
    <errorMessage>You cannot edit an Invoice that has already been sent to Quickbooks. For any changes, you can create a new Invoice or a Credit Memo.</errorMessage>
</ValidationRule>